--- a/contact.html
+++ b/contact.html
@@ -279,26 +279,50 @@
    <main role="main" id="main">
       <div class="scroll-content smooth-scroll" data-scroll-speed="8">
          <div class="wrapper">
+            <section class="lets" data-humcolor="#000">
+               <img src="/assets/resources/img/contact-bg.png" alt="" />
+               <div class="flex-row">
+                  <h1 class="first-h1">LET’S WORK</h1>
+                  <h1 class="sec-h1">T<span>✺</span>GETHER </h1>
+                  <p>
+                     old ways won't open new doors. if you have an interesting idea, let's build the future together!
+                  </p>
+               </div>
+            </section>
             <!--top  Section-->
-            <section class="contact-form-block black-bg " id="contact-form" data-scroll data-bgcolor="#000"
-               data-humcolor="#fff">
+            <section class="contact-form-block black-bg " id="contact-form" data-scroll data-humcolor="#000">
                <div class="contact-inner d-flex flex-row justify-content-sb" data-scroll>
                   <div id="contact-left-sticky"></div>
-                  <div class="contact-left-img mob" data-scroll> <img data-scroll class="opacity-0"
-                        src="/assets/resources/img/about.png" alt="" /></div>
                   <div class="contact-left-img web" data-scroll data-scroll-sticky
-                     data-scroll-target="#contact-left-sticky"> <img data-scroll class="opacity-0"
-                        src="/assets/resources/img/about.png" alt="" /></div>
+                     data-scroll-target="#contact-left-sticky">
+                     <ul class="say-hello-details">
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Email</h6>
+                           <p><a href="mailto:hi@weareenigma.com">hi@weareenigma.com</a></p>
+                        </li>
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Office</h6>
+                           <p>Suite 301, Grandslam I-Thum,
+                              <br> Sector - 62,
+                              Noida,<br> Uttar Pradesh, IN 201301
+                           </p>
+                        </li>
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Phone</h6>
+                           <p><a href="tel:+91 8178 026 136">+91 8178 026 136</a></p>
+                        </li>
+                     </ul>
+                  </div>
                   <div class="contact-right" id="contact-form-right-side" data-scroll>
                      <div class="welcome-heading d-flex justify-content-sb align-items-start">
-                        <h1 data-scroll class="title-animation"> <span>Tell Us <br> About Your</span>
-                           <br /><span><em>Project.</em></span>
+                        <h1 data-scroll class="title-animation"> <span>Tell Us About </span>
+                           <br /><span>Your Project.</span>
                         </h1>
                      </div>
 
                      <div class='gf_browser_chrome gform_wrapper gform_legacy_markup_wrapper' id='gform_wrapper_2'>
                         <div id='gf_2' class='gform_anchor' tabindex='-1'></div>
-                        <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_2' id='gform_2'
+                        <form method='post' enctype='multipart/form-data' target='_frame_2' id='gform_2'
                            action='/contact/#gf_2'>
                            <div class='gform_body gform-body'>
                               <ul id='gform_fields_2'
@@ -339,17 +363,10 @@
                               </ul>
                            </div>
                            <div class='gform_footer top_label'> <button class='button gform_button' data-magnetic=""
-                                 data-cursor="-opaque" id='gform_submit_button_2'><span>Submit</span></button> <input
-                                 type='hidden' name='gform_ajax'
-                                 value='form_id=2&amp;title=&amp;description=&amp;tabindex=49' />
-                              <input type='hidden' class='gform_hidden' name='is_submit_2' value='1' /> <input
-                                 type='hidden' class='gform_hidden' name='gform_submit' value='2' /> <input
-                                 type='hidden' class='gform_hidden' name='gform_unique_id' value='' /> <input
-                                 type='hidden' class='gform_hidden' name='state_2' value='' /> <input type='hidden'
-                                 class='gform_hidden' name='gform_target_page_number_2' id='gform_target_page_number_2'
-                                 value='0' /> <input type='hidden' class='gform_hidden'
-                                 name='gform_source_page_number_2' id='gform_source_page_number_2' value='1' /> <input
-                                 type='hidden' name='gform_field_values' value='' />
+                                 data-cursor="-opaque" id='gform_submit_button_2'><span>Submit</span> <span><img
+                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button> <input
+                                 type='hidden' name='' />
+
                            </div>
                         </form>
                      </div>
@@ -358,64 +375,35 @@
                </div>
             </section>
 
-            <section class="contact-details-block black-bg" data-scroll>
-               <div class="container">
-                  <ul class="say-hello-details">
-                     <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                        <h6>Email</h6>
-                        <p><a href="mailto:hi@weareenigma.com">hi@weareenigma.com</a></p>
-                     </li>
-                     <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                        <h6>Office</h6>
-                        <p>495 Grand Blvd<br> Suite 206<br> Miramar Beach, FL<br> USA 32459</p>
-                     </li>
-                     <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                        <h6>Phone</h6>
-                        <p><a href="tel:+91 8178 026 136">+91 8178 026 136</a></p>
-                     </li>
-                     <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                        <h6>Follow</h6>
-                        <div class="social-links">
-                           <p><a href="https://www.facebook.com/in.enigmadigital" target="_blank">Facebook</a></p>
-                           <p><a href="https://www.instagram.com/enigmadigital/" target="_blank">Instagram</a></p>
-                           <p><a href="https://twitter.com/_EnigmaDigital" target="_blank">Twitter</a></p>
-                           <p><a href="https://www.linkedin.com/company/in-enigmadigital
-                              " target="_blank">LinkedIn</a>
-                           </p>
-                        </div>
-                     </li>
-                  </ul>
-               </div>
-            </section>
             <!-- Marquee -->
-            <section class="marquees">
+            <section class="marquees" style="background: transparent;">
                <a href="#">
-                  <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="Contact Us"
+                  <div class="marquees__inner black-strock" aria-hidden="true" ref="inner" data-cursor-text="Contact Us"
                      data-cursor="-color-white -xlg">
 
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                      <div class="marquees__part">
-                        WANT TO WORK WITH US?
+                        VIEW OUR WORK <img src="/assets/resources/img/footer-circle.svg" alt="" />
                      </div>
                   </div>
                </a>
             </section>
             <!-- footer -->
-            <footer id="footer">
+            <footer id="footer" class="dark-footer">
                <div class="f-container">
                   <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                      <h3>Let’s Build Something </h3>
