--- a/services.html
+++ b/services.html
@@ -453,7 +453,7 @@
                     <img class="bottom-bg" src="/assets/resources/img/our-team.png" alt="" />
                     <div class="marquees" style="background: transparent;">
                         <a href="#">
-                            <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="Contact Us"
+                            <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
                                 data-cursor="-color-white -xlg">
 
                                 <div class="marquees__part">
