--- a/index.html
+++ b/index.html
@@ -653,29 +653,16 @@
                 </div>
                 <!-- sdh -->
                 <!-- About Section -->
-                <section id="about2" class="chnage" data-bgcolor="#fff" data-humcolor="#000" data-textcolor="#000">
+                <section id="about2" class="chnage" data-humcolor="#000">
                     <div class="container">
+
                         <div class="about-f">
-                            <div class="about-p m-hide">
-                                <p>With over 100 years of combined team experience, we operate at the intersection of
-                                    art, technology & consumer psychology to curate
-                                </p>
-                            </div>
-                            <div class="about-p w-hde">
-                                <p>With over 100 years of combined team experience, we operate at the intersection of
-                                    art, technology & consumer psychology to curate Integrated Digital Solutions
-                                </p>
-                            </div>
-                            <div class="big-h m-hide">
-                                <h1 class="re" data-splitting> Integrated
-                                </h1>
-                            </div>
-                        </div>
-                        <div class="big-h2 m-hide">
-                            <h1 class="re" data-splitting>Digital Solutions</h1>
+                            <img src="/assets/resources/img/good-section.svg" alt="" />
                         </div>
                     </div>
                 </section>
+                <!-- end -->
+
                 <section class="black-bg about-us-section" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="about-us-inner d-flex">
                         <div id="test"></div>
