--- a/about.html
+++ b/about.html
@@ -311,8 +311,8 @@
                                         data-scroll-delay="0.1" data-scroll-offset="60">We operate at
                                         the</span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60"><em>intersection of
-                                            design,</em></span>
+                                        data-scroll-offset="60">intersection of
+                                        design,</span>
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
                                         data-scroll-offset="60">consumer psychology,</span><br /> <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
@@ -357,8 +357,8 @@
                 <!-- end -->
 
                 <!-- About Points -->
-                <section id="about2" class="about-page" data-humcolor="#000" data-scroll>
-                    <div class="container">
+                <section id="about2" class="about-page" data-humcolor="#000">
+                    <div class="container" data-scroll>
                         <div class="text_anim">
                             <h2 class="he"><span>Why Us ?</span></h2>
                             <p class="parh">
@@ -379,6 +379,9 @@
                                 </span>
                             </p>
                         </div>
+
+                    </div>
+                    <div class="container">
                         <div id="abt" data-scroll>
                             <div>
                                 <div data-scroll class="why">
@@ -2108,16 +2111,16 @@
                                 </span>
                             </p>
                             <div class="grid-logo">
-                                <div class="logo-item">
+                                <div class="logo-item bottom-border">
                                     <img src="/assets/resources/img/logo/logo01.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item bottom-border">
                                     <img src="/assets/resources/img/logo/logo02.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item bottom-border">
                                     <img src="/assets/resources/img/logo/logo03.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item bottom-border" style="border: none;">
                                     <img src="/assets/resources/img/logo/logo04.svg" alt="logo" />
                                 </div>
                                 <div class="logo-item">
@@ -2129,7 +2132,7 @@
                                 <div class="logo-item">
                                     <img src="/assets/resources/img/logo/logo07.svg" alt="logo" />
                                 </div>
-                                <div class="logo-item">
+                                <div class="logo-item" style="border: none;">
                                     <img src="/assets/resources/img/logo/logo08.svg" alt="logo" />
                                 </div>
                             </div>
