--- a/contact.html
+++ b/contact.html
@@ -281,10 +281,10 @@
          <div class="wrapper">
             <section class="lets" data-humcolor="#000">
                <img src="/assets/resources/img/contact-bg.png" alt="" />
-               <div class="flex-row">
-                  <h1 class="first-h1">LET’S WORK</h1>
-                  <h1 class="sec-h1">T<span>✺</span>GETHER </h1>
-                  <p>
+               <div class="flex-row he1">
+                  <h1 class="first-h1"><span class="l">LET’S WORK</span></h1>
+                  <h1 class="sec-h1"><span class="l">T<span>✺</span>GETHER</span> </h1>
+                  <p class="l">
                      old ways won't open new doors. if you have an interesting idea, let's build the future together!
                   </p>
                </div>
