--- a/about.html
+++ b/about.html
@@ -491,7 +491,7 @@
 
                 <!-- Team Sec -->
                 <div class="grdient" style="background: linear-gradient(1deg, #090e26, #031554);">
-                    <!-- <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
+                    <img class="bg-team" src="/assets/resources/img/our-team.png" alt="">
                     <section class="team-s" data-humcolor="#fff" data-scroll>
                         <div class="container text_anim">
                             <h2 class="he"><span>Our Team</span></h2>
