--- a/services.html
+++ b/services.html
@@ -329,37 +329,52 @@
                 </section>
                 <div class="container" data-bgcolor="#fff" data-humcolor="#000">
                     <div class="services-s">
-                        <div class="flex-con align-center ">
-                            <div class="fle p-right ">
+                        <div class="flex-con align-center " data-scroll>
+                            <div class="fle p-right text_anim">
                                 <h3 class="typ" id="5">
-                                    STRATEGY
+                                    <span> STRATEGY</span>
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
-                                        UX Consultancy, Digital Strategy, Competitor Analysis, Industry Analysis, User
-                                        Research, Campaign Planning and Digital Transformation Consulting.
+                                        <span>
+                                            UX Consultancy, Digital Strategy, Competitor Analysis, Industry Analysis,
+                                            User
+                                            Research, Campaign Planning and Digital Transformation Consulting.
+                                        </span>
                                     </p>
                                     <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
                                             data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="image">
-                                <img src="/assets/resources/img/Service-elements/Service-01.svg" alt="" />
+                            <div class="image" data-scroll="">
+                                <div class="text_anim">
+                                    <span>
+                                        <img src="/assets/resources/img/Service-elements/Service-01.svg" alt="" />
+                                    </span>
+                                </div>
                             </div>
                         </div>
-                        <div class="flex-con align-center  ">
-                            <div class="image">
-                                <img src="/assets/resources/img/Service-elements/Service-02.svg" alt="" />
+                        <div class="flex-con align-center" data-scroll>
+                            <div class="image text_anim">
+                                <span>
+                                    <img src="/assets/resources/img/Service-elements/Service-02.svg" alt="" />
+                                </span>
                             </div>
-                            <div class="fle p-left ">
+                            <div class="fle p-left text_anim">
                                 <h3 class="typ" id="6">
-                                    DESIGN
+                                    <span>
+                                        DESIGN
+                                    </span>
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
-                                    <p>UI Design, Responsive Web Design, Interface Design, User Flow Mapping,
-                                        Wireframing & Prototyping, Design Systems, Animations, Illustrations, Experience
-                                        Mapping, Visual Design and UI Kits.
+                                    <p>
+                                        <span>
+                                            UI Design, Responsive Web Design, Interface Design, User Flow Mapping,
+                                            Wireframing & Prototyping, Design Systems, Animations, Illustrations,
+                                            Experience
+                                            Mapping, Visual Design and UI Kits.
+                                        </span>
                                     </p>
                                     <div class="en-form-submit"><a class="en-btn en-btn_send" data-magnetic
                                             data-cursor="-opaque"><span data-text="Read More">Read More</span></a>
@@ -407,57 +422,75 @@
 
                     </div>
                 </div>
-                <section class="aproch">
+                <section class="aproch" data-scroll>
                     <img class="top-bg" src="/assets/resources/img/our-team.png" alt="" />
-                    <div class="container">
-                        <h2>OUR APPROACH</h2>
+                    <div class="container text_anim">
+                        <h2><span>
+                                OUR APPROACH
+                            </span></h2>
+                    </div>
+                    <div class="container text_anim">
                         <div class="approach-lis">
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6>01<span>Define</span>
+                                    <h6><span class="numb">
+                                            01
+                                        </span><span class="cons">Define</span>
                                     </h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <p>Develop a thorough understanding of the project, audience, and objectives to
-                                        formulate a
-                                        strategy.</p>
+                                    <p><span>Develop a thorough understanding of the project, audience, and objectives
+                                            to
+                                            formulate a
+                                            strategy.</span></p>
                                 </div>
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6>02<span>DESIGN</span></h6>
+                                    <h6><span class="numb">02</span><span class="cons">DESIGN</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <p>Craft a purposeful design to reflect the objectives and indicate the direction
-                                        for the entire project.</p>
+                                    <p><span>
+                                            Craft a purposeful design to reflect the objectives and indicate the
+                                            direction
+                                            for the entire project.
+                                        </span></p>
                                 </div>
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6>03<span>IMPLEMENT</span></h6>
+                                    <h6><span class="numb">03</span><span class="cons">IMPLEMENT</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <p>Bring the design to life in the form of an interactive and functional prototype.
-                                        Review, refine and optimise.</p>
+                                    <p><span>
+                                            Bring the design to life in the form of an interactive and functional
+                                            prototype.
+                                            Review, refine and optimise.
+                                        </span></p>
                                 </div>
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6>04<span>DEVELOP</span></h6>
+                                    <h6><span class="numb">04</span><span class="cons">DEVELOP</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <p>Incorporate implementation and technical components into a highly functional
-                                        system, ready for review.</p>
+                                    <p><span>
+                                            Incorporate implementation and technical components into a highly functional
+                                            system, ready for review.
+                                        </span></p>
                                 </div>
                             </div>
                             <div class="flex-con">
                                 <div class="ap-no">
-                                    <h6>05<span>DELIVER</span></h6>
+                                    <h6><span class="numb">05</span><span class="cons">DELIVER</span></h6>
                                 </div>
                                 <div class="ap-prah">
-                                    <p>Review, refine, test and prepare final product for delivery. Launch and continue
-                                        to evolve
-                                        over time.</p>
+                                    <p><span>
+                                            Review, refine, test and prepare final product for delivery. Launch and
+                                            continue
+                                            to evolve
+                                            over time.
+                                        </span></p>
                                 </div>
                             </div>
                         </div>
